data/derived/fa15/progs/unify/prog2033.ml.out
Characters 38-39:
  let f a x = fun a -> x x a in
                         ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b -> 'c
